@@ -15,6 +15,7 @@ Version 6.0.9 - not yet released
   - internal GPS: show "waiting for fix" until location is obtained
   - allow SD card installation
   - "Droid Sans" is the default Android font
+  - enable font preview
 
 Version 6.0.8 - 2011/03/23
 * don't estimate thermal source for skewed thermals
